<resources>
    <string name="app_name">BeProductive</string>
    <string name="txt_be">Be</string>
    <string name="txt_productive">Productive</string>
    <string name="txt_name_app">
        <font color="#ffc120">Be</font>
        <font color="#6000f7">Productive</font>
    </string>
    <string name="txt_welcome_to">Welcome to</string>
    <string name="txt_on_boarding_2">Tools for mindfulness exercises, timers, and productivity trackers</string>
    <string name="txt_on_boarding_3">Editor for creating, editing, and organizing note</string>
    <string name="txt_on_boarding_4">Dive in and discover insights, tips, and strategies that will propel your efficiency and success\n</string>
    <string name="txt_all_notes">All notes</string>
    <string name="txt_nhap">Thuan Nguyen Duc Nguyen Duc Thuan hsjkdhfjksdhfjksdhfhsdjkhfjksdhfsgfhjsd skjhfjksdskdhfjksd shdfjkhsdsjkhfjksd</string>
    <string name="txt_write_a_new_note">Write a new note</string>
    <string name="txt_date_create_note">Dec 21 2023, 23:58</string>
    <string name="txt_note_something">Note something...</string>
    <string name="txt_delete_dialog">Are you sure to delete?</string>
    <string name="txt_yes">Yes, delete</string>
    <string name="txt_no">No, keep it</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_detail">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholder Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholde Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholde Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholde Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholde Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholde Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholde Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visu</string>
    <string name="txt_edit_">Edit</string>
    <string name="txt_focus">Focus</string>
    <string name="txt_focus_time">25:00</string>
    <string name="txt_break_time">5:00</string>
    <string name="txt_break">Break</string>
    <string name="txt_start">Start</string>
    <string name="txt_content_focus">What to focus on next?</string>
    <string name="txt_19_16">19:16</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_select">Select</string>
    <string name="txt_time_brak">5:00</string>
    <string name="txt_time_to_break">Time to break!!</string>
    <string name="txt_yes_back">Yes, back!</string>
    <string name="txt_no_stay">No, stay!!</string>
    <string name="txt_confirm_exit">Are you sure to exit?</string>
    <string name="txt_pick_a_color">Pick a color</string>
    <string name="txt_title_article">Apple\'s AI push will reportedly be called Apple Intelligence, of course</string>
    <string name="txt_content_article"><![CDATA[The on-chain analytics firm CryptoQuant has explained why Bitcoin and Ethereum have recently appeared to be on a path towards acceleration.Bitcoin & Ethereum Are Looking Bullish In On-Chain Metri… [+268 chars]]]></string>
    <string name="txt_author">James</string>
    <string name="txt_published_at">2024-06-09</string>
    <string name="txt_explore">Explore</string>
    <string name="txt_popular">Popular</string>
    <string name="txt_new_articles">New articles</string>
    <string name="txt_title_popular">Healthy movie snacks</string>
    <string name="txt_time_analysis">Time analysis</string>
</resources>