<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/bg_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_font"
        android:gravity="center"
        android:text="@string/txt_delete_dialog"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_yes"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_item_note"
        android:fontFamily="@font/inter_font"
        android:gravity="center"
        android:text="@string/txt_yes"
        android:textColor="@color/purple"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_no_delete"
        android:fontFamily="@font/inter_font"
        android:gravity="center"
        android:text="@string/txt_no"
        android:textColor="@color/purple"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>