<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:gravity="center"
            android:text="@string/txt_confirm_exit"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_yes_back"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_item_note"
            android:fontFamily="@font/inter_font"
            android:gravity="center"
            android:text="@string/txt_yes_back"
            android:textColor="@color/purple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_no_stay"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_no_delete"
            android:fontFamily="@font/inter_font"
            android:gravity="center"
            android:text="@string/txt_no_stay"
            android:textColor="@color/purple"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
