<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_font"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/txt_title_article"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/inter_font"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/txt_author"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_publishedAt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/inter_font"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/txt_published_at"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />
    </TableRow>


    <ImageView
        android:id="@+id/iv_article"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/img_article" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/tv_desc_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:gravity="start"
            android:padding="5dp"
            android:text="The on-chain analytics firm CryptoQuant has explained why Bitcoin and Ethereum have recently appeared to be on a path towards acceleration.Bitcoin &amp; Ethereum Are Looking Bullish In On-Chain Metri… [+268 chars]"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />
    </ScrollView>

</LinearLayout>