<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cL_main_detail"
    android:background="@color/light_blue">

    <ImageView
        android:id="@+id/iv_back_detail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/dimen_margin_start"
        android:layout_marginTop="@dimen/dimen_margin_top"
        android:padding="5dp"
        android:src="@mipmap/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_edit_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_margin_top"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txt_edit"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ln_create_note"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back_detail">

        <TextView
            android:id="@+id/tv_date_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter_font"
            android:gravity="end"
            android:text="@string/txt_date_create_note"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/sc_content_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_font"
                android:gravity="fill"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:text="@string/txt_detail"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>